templates img blog

--- a/dproject/templates/blog_detail.html
+++ b/dproject/templates/blog_detail.html
@@ -46,7 +46,7 @@
 
                 {% endfor %}
               </ul>
-              <!-- END comment-list -->
+
 
               <div class="comment-form-wrap pt-5">
                 <h3 class="mb-5">Leave a comment</h3>
@@ -77,7 +77,7 @@
 
 
             <div class="sidebar-box">
-              <img src="{{ post.author_img.url }}" alt="Free Website Template by Free-Template.co" class="img-fluid mb-4 w-50 rounded-circle">
+              <img src="{{ post.author_img.url }}" alt="Favorite author" class="img-fluid mb-4 w-50 rounded-circle">
               <h3 class="text-black">About The Author</h3>
               <p>{{ post.author_about }}</p>
 
