--- a/dproject/templates/base.html
+++ b/dproject/templates/base.html
@@ -159,7 +159,7 @@
   </div>
 
   <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
-  <script src="{% static 'js/bootstrap.bundle.min' %}"></script>
+  <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
   <script src="{% static 'js/owl.carousel.min.js' %}"></script>
   <script src="{% static 'js/jquery.sticky.js' %}"></script>
   <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
