--- a/dproject/templates/index.html
+++ b/dproject/templates/index.html
@@ -20,7 +20,7 @@
    <div class="container site-section">
       <div class="row justify-content-center text-center mb-5">
         <div class="col-md-6">
-          <span class="text-primary">ALL LINKS PROVIDED ARE AFFILIATE LINKS</span>
+          <span class="text-primary">All Links Provided are Affiliate Links</span>
           <h2 class="mb-4">What Inspires Us</h2>
         </div>
       </div>
